sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_empty_arrivalspeed/errors.duarouter
Error: Attribute 'arrivalSpeed' in definition of a vehicle is empty.
Error: Invalid arrivalSpeed definition for vehicle '1';
 must be one of ("current", or a float>=0)
Quitting (on error).
